2003-06-13  Callum McKenzie  <callum@physics.otago.ac.nz>

	* TODO: Massive update to hopefully include every known issue and
	bug and where it stands in terms of the 2.4 and 2.5 releases.

2003-06-10  Christian Neumair  <chris@gnome-de.org>

	* glines/.cvsignore, .cvsignore: Added missing files.

2003-06-08  Callum McKenzie  <callum@physics.otago.ac.nz>

	* configure.in: Minor cleanups for stuff we don't use
	anymore. Fixes bug #114487.

2003-06-06  Callum McKenzie  <callum@physics.otago.ac.nz>

	* MAINTAINERS: Updated.

2003-06-03  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (DIST_SUBDIRS): Make sure blackjack is packaged.

	* README: Updated for 2.3.3
	* configure.in: 2.3.3

2003-06-02  Callum McKenzie  <callum@physics.otago.ac.nz>

	* configure.in:
	* Makefile.am (cxx_DIRS): Added blackjack.

2003-05-31  Callum McKenzie  <callum@physics.otago.ac.nz>

	* configure.in (scores_user): We now set the scoredir variable in
	a central place. Also added a check for differing
	libgnome/gnome-games prefixes so that at least the user is told
	there may be a problem.

2003-05-30  Callum McKenzie  <callum@physics.otago.ac.nz>

	* README: Updated, including documentation for the new configure
	options.

	* configure.in: Added --disable-setgid, --with-scores-group and
	--with-scores-user to allow more control over the installation
	process. Also added a check for the games group (or whichever
	group is chosen).

2003-05-23  Callum McKenzie  <callum@physics.otago.ac.nz>

	* configure.in: Check for ngettext.

2003-05-19  Telsa Gwynne  <hobbit@aloss.ukuu.org.uk>

	* configure.in: Added "cy" (Welsh) to ALL_LINGUAS

2003-05-18  Callum McKenzie  <callum@physics.otago.ac.nz>

	* NEWS: 
	* README: 
	Updated for 2.3.2.
	
	* configure.in: 2.3.2 release.

2003-05-16  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am: 
	* configure.in: gnobots and gnibbles are back ! Freecell is dead.

2003-05-16  Danilo Šegan  <dsegan@gmx.net>
