@@ -55,12 +55,7 @@ AisleRiot:
         - Corner pixels in the mask.
 
 Blackjack:
-        - We need a schemas file, if you have it Jon, it hasn't gone 
-          into CVS.
-        - Selecting a second rule set while one is loading leads to a 
-          stray window.
         - Whatever the UI review says.
-
 
 Gataxx:
         - Share graphics with Iagno.
