@@ -1,3 +1,7 @@
+2003-06-13  William Jon McCann  <mccann@jhu.edu>
+
+	* TODO (Blackjack): Removed fixed items.
+
 2003-06-13  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* TODO: Massive update to hopefully include every known issue and
